# weerust

./: .dockerignore  .env  .env.example  .gitignore  AGENT_BRIEF.md  Cargo.toml  DECISIONS.md  DOCKER_FILES.txt  Dockerfile  Dockerfile.optimized  Makefile  README-rust.md  README.md  SCOPE.md  SUPERPROMPT.md  auggie-summary.md  config.example.toml  config.toml  docker-compose.enhanced.yml  docker-compose.yml  rust-workspace-architecture.md
.github/workflows/: ci.yml  release.yml
crates/weewx-cli/: Cargo.toml
crates/weewx-cli/src/: lib.rs  main.rs
crates/weewx-cli/tests/: api_tests.rs  http_post_ingest.rs  http_smoke.rs  ingest_ecowitt.rs  ingest_udp.rs
crates/weewx-config/: Cargo.toml
crates/weewx-config/src/: lib.rs
crates/weewx-obs/: Cargo.toml
crates/weewx-obs/src/: lib.rs
crates/weewx-sinks/: Cargo.toml
crates/weewx-sinks/src/: influx.rs  lib.rs  postgres.rs  sqlite.rs
crates/weex-archive/: Cargo.toml
crates/weex-archive/src/: aggregator.rs  buffer.rs  lib.rs
crates/weex-core/: Cargo.toml
crates/weex-core/src/: lib.rs  pipeline.rs  rollups.rs  types.rs  units.rs
crates/weex-daemon/: Cargo.toml
crates/weex-daemon/src/: config.rs  main.rs  scheduler.rs
crates/weex-daemon/tests/: golden_tests.rs
crates/weex-db/: Cargo.toml
crates/weex-db/src/: client.rs  lib.rs  queries.rs  schema.rs
crates/weex-ingest/: Cargo.toml
crates/weex-ingest/src/: driver.rs  interceptor.rs  lib.rs  simulator.rs
docs/: DOCKER_DEPLOYMENT.md  DOCKER_README.md  DOCKER_SUMMARY.md  RESEARCH_DOCKER_RUST.md  local_report.md
scripts/: deploy-cloudrun.sh
scripts/db-backup/: backup.sh  restore.sh
scripts/db-init/: 01-create-schema.sql  02-create-procedures.sql
tests/golden/: .gitignore  Cargo.toml  README.md  db_diff.rs  fixtures.rs  mod.rs  test_db.rs
tests/golden/baseline/: .gitkeep
tests/golden/fixtures/: README.md  example_simple.json
tests/golden/packets/: .gitkeep
tests/golden/src/: main.rs
tests/http_ingest/: README.md  TESTER_FINDINGS_REPORT.md  TEST_EXECUTION_GUIDE.md  run_all_tests.sh  test_ecowitt_format.sh  test_error_handling.sh  test_stress.sh  test_wunderground_format.sh  validate_logging.sh  validate_mariadb.sh
