[workspace]
resolver = "2"
members = [
    "crates/weex-core",
    "crates/weex-db",
    "crates/weex-ingest",
    "crates/weex-archive",
    "crates/weex-daemon",
    "tests/golden",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["WeeWX Rust Port Team"]
license = "GPL-3.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
insta = "1.34"
tempfile = "3.8"
# Async traits
async-trait = "0.1"

# URL parsing
url = "2.5":w
