[package]
name = "weex-archive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
weex-core = { path = "../weex-core" }
weex-db = { path = "../weex-db" }
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
