[package]
name = "weex-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
weex-core = { path = "../weex-core" }
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
